--- a/ch1-intro.tex
+++ b/ch1-intro.tex
@@ -102,3 +102,4 @@ Note that the diversity of my training samples will always be a limiting factor 
 
 \section{Thesis Statement}
 
+Score norms, computed by neural score estimators, produce a space in which inlying, typical populations may be separated from a population that is out-of-distribution or anomalous.
