--- a/ch5-spatial.tex
+++ b/ch5-spatial.tex
@@ -17,7 +17,7 @@ Reconstruction-based anomaly detectors are trained to produce typical counterpar
 \subsection*{Generative Modeling based Approaches}
 Some methods propose to employ generative models for removing anomalies via imputation or ``restoration''~\cite{schlegl2019f,pmlr-v102-you19a}. Imputation-based approaches utilize masking strategies to mask out certain regions of the image and use the generative model to in-paint \textit{only} the masked regions. Restoration-based approaches do not use any masks and instead modify the entire image, using the original image as the starting point in the sampling procedure.
 
-Recently, owing to the success of score-based diffusion models, much of the research has focused on using diffusion models as their generative model (replacing GANs of yesteryear)~\cite{wyattAnoddpmAnomalyDetection2022,pinaya2022fast,liuUnsupervisedOutofDistributionDetection2023,behrendtPatchedDiffusionModels2023}. All of these models provide slight modifications to the diffusion sampling process, and start the generation process from an input image rather than random noise. The sampling process starts by adding noise to the input image and iteratively denoises the sample to generate an anomaly-free counterpart of the original image. Once the cleaned sample is generated, a voxel-wise difference between the input and its anomaly-free counterpart is used as the anomaly score. The main differentiating factor between these methods are the hyperparameters used for training and the sampling strategies used during inference. 
+Recently, owing to the success of score-based diffusion models, much of the research has focused on using diffusion models as the generative model (replacing GANs of yesteryear)~\cite{wyattAnoddpmAnomalyDetection2022,pinaya2022fast,liuUnsupervisedOutofDistributionDetection2023,behrendtPatchedDiffusionModels2023}. All of these models provide slight modifications to the diffusion sampling process, and start the generation process from an input image rather than random noise. The sampling process starts by adding noise to the input image and iteratively denoises the sample to generate an anomaly-free counterpart of the original image. Once the cleaned sample is generated, a voxel-wise difference between the input and its anomaly-free counterpart is used as the anomaly score. The main differentiating factor between these methods are the hyperparameters used for training and the sampling strategies used during inference. 
 
 \subsection*{Feature Embedding based Approaches}
 % To circumvent the drawbacks of reconstruction errors in the image space, feature embedding based approaches compute recionstructions erroin the \textit{embedding} space.
@@ -56,21 +56,21 @@ This section focuses on the task of segmenting anomalies in 2D images due to the
 
 Most existing methods are trained and tested on the MvTec anomaly detection dataset~\cite{Bergmann_2019_CVPR}. This dataset focuses on industrial inspection and comprises of a set of defect-free training images and a test set of images with various kinds of manufacturing defects. The test set includes high resolution segmentation maps which allow us to validate the performance of the anomaly detection model. Note that the difficulty of this task stems from its unsupervised nature. At training time, the model will only see typical images and it cannot assume anything about the defects at the testing stage.
 
-Similar to MSMA, Spatial-MSMA is trained in two stages. First, a score matching model is trained on the images and then the weights are frozen. Next, a likelihood model is trained on the score norms of the images. Unlike MSMA however, in Spatial-MSMA the likelihood model is trained on score norms of \textit{patches} rather than an score norms of an entire image.
+Similar to MSMA, Spatial-MSMA is trained in two stages. First, a score matching model is trained on the images and then the weights are frozen. Next, a likelihood model is trained on the score norms of the images. Unlike MSMA however, in Spatial-MSMA the likelihood model is trained on score norms of \textit{patches} rather than on score norms of entire images.
 
-\subsection*{Experiment Details}
+\subsection*{Experiment Details and Results}
 To train the score-matching model, I finetuned a publicly available checkpoint~\footnote{\url{https://drive.google.com/file/d/1JInV8bPGy18QiIzZcS1iECGHCuXL6_Nz/view?usp=drive_link}} of a score-based diffusion model trained on the CIFAR-10 dataset. Next, a deep normalizing flow model is trained on the score norms for each patch, where the patch size is a fixed hyper parameter. The flow model receives the positional embeddings and the feature representations of the original image as conditioning vectors. Once the flow model is trained, we can evaluate it at every patch location in the image using a sliding-window. The resulting image is a likelihood heatmap, which is inverted to get the anomaly heatmap (negative log-likelihood).
 
-For this experiment, the score model was trained on the \textit{Cables} class. To evaluate the anomaly detection performance, the results were compared to that of the original authors of the MvTec dataset~\cite{bergmann2020uninformed}. I compute the per-region overlap metric introduced by the same authors, which measures the overlap between connected components in the ground truth and the anomaly map for every threshold. Even without any hyperparameter tuning, Spatial-MSMA is able to outperform the baseline by 10\% for the same patch size on the Cables class (.741 PRO-AUC vs .671 PRO-AUC).
+For this experiment, the score model was trained on the \textit{Cables} class. To evaluate the anomaly detection performance, the results were compared to that of the original authors of the MvTec dataset~\cite{bergmann2020uninformed}. I compute the per-region overlap metric (PRO-AUC) introduced by the same authors, which measures the overlap between connected components in the ground truth and the anomaly map for every threshold. Even without any hyperparameter tuning, Spatial-MSMA is able to outperform the baseline by 10\% for the same patch size on the Cables class (.741 PRO-AUC vs .671 PRO-AUC).
 
 
 \section{Case Study: Lesion Detection in Volumetric Brain MRIs}
 Following the encouraging results on the MvTec dataset, this section will consider the more challenging task of detecting anomalies in medical images. The purpose of this case study is to reflect a real world usecase: automatic detection and segmentation of pathologies. As this is a feasibility experiment, one needs to minimize confounding factors that can be introduced due to a distributional shift between the training and testing populations. Thus, the anomalies will be simulated on a held out inlier test set, ensuring that the introduced anomalies are the \textit{primary} factor differentiating the test set from the inlier population.
 
 \subsection*{Experiment Details}
-The model is trained on a population of typically developing adolescent brains, retrieved from the ABCD study~\cite{Casey2018adolescent}. We use both T1-weigthed and T2-weighted images. The images were downsampled to a pixel spacing of 2, cropped by the largest brain mask with some additional padding. The resulting 3D volume is of size 96x112x80. The anomalies were simulated using lesion simulator tool~\cite{Filho_2019}, available as the MSLesionSimulator extension~\footnote{https://www.slicer.org/wiki/Documentation/Nightly/Modules/MSLesionSimulator} of the Slicer3D software package~\cite{fedorov3DSlicerImage2012}. The lesion load parameter was set to 20 and the rest of the hyperparameters were kept at their default values. A post processing step was performed to enhance the lesion intensity by a factor of $1.5$.
+The model is trained on a population of typically developing adolescent brains, retrieved from the ABCD study~\cite{Casey2018adolescent}. We use both T1-weigthed and T2-weighted images. The images were downsampled to a pixel spacing of 2mm isotropic, cropped by the largest brain mask with some additional padding. The resulting 3D volume is of size 96x112x80. The anomalies were simulated using lesion simulator tool~\cite{Filho_2019}, available as the MSLesionSimulator extension~\footnote{https://www.slicer.org/wiki/Documentation/Nightly/Modules/MSLesionSimulator} of the Slicer3D software package~\cite{fedorov3DSlicerImage2012}. The lesion load parameter was set to 20 and the rest of the hyperparameters were kept at their default values. A post processing step was performed to enhance the lesion intensity by a factor of $1.5$.
 
-The score-norms were retrieved from a diffusion model, using a 3D convolutional UNet-like architecture. I used the VESDE formulation, with 1000 timesteps. The minimum sigma was set to <MIN> and the maximum was computed from the maximum pairwise distance in the trianing set <MAX>. The model was trained for 1.5 million iterations. The batch size was doubled at roughly the half way point during training. This is a simple yet effective method proposed by~\cite{le2018dont}, to effectively anneal the learning rate without having to use a decay schedule. The authors also found that increasing the batch size also reduced the number of parameter updates required to reach the same test accuracies as the learning rate decay setting.
+The score-norms were retrieved from a diffusion model, using a 3D convolutional UNet-like architecture. I used the VESDE formulation, with 1000 timesteps. The minimum sigma was set to $<MIN>$ and the maximum was computed from the maximum pairwise distance in the training set $<MAX>$. The model was trained for 1.5 million iterations. The batch size was doubled at roughly the half way point during training. This is a simple yet effective method proposed by~\cite{le2018dont}, to effectively anneal the learning rate without having to use a decay schedule. The authors also found that increasing the batch size also reduced the number of parameter updates required to reach the same test accuracies as the learning rate decay setting.
 
 During inference, the voxel-wise anomaly scores are first brain masked followed by thresholding. The threshold is determined for each sample by searching for the threshold that gives the lowest symmetric mean surface distance between the ground truth and the post-threshold segmentation. Searching for a threshold like this is common practice in evaluating anomaly detectors~\cite{baur_deep_2019}. The segmentations are post-processed by removing connected components of size less than 3 voxels (using a connectivity of 1). The remaining segmentation mask is dilated via a disk of radius 1 as the structuring element. Note that this inference procedure is performed for all methods tested in the experiment.
 
@@ -85,12 +85,9 @@ Two generative-model based approaches were also included in the comparison. Firs
 
 Lastly, GradCAM was included as a representative of attribution-based approaches. Specifically, I used Guided-GradCAM~\cite{Selvaraju2016GradCAMVE} which combines saliency maps (with some modifications) and GradCAM to give superior results to vanilla GradCAM. The gradients were computed using the outputs of a non-spatial MSMA. Concretely, a GMM was trained on the whole-image score norms and the GradCAM gradients were computed using the negative likelihood estimates. This corresponds to computing voxel-wise attribution maps for an MSMA anomaly score. Thus, the method is denoted as GradCAM-MSMA in Table~\ref{lesion_results}.
 
-\subsection*{Segementation Metrics for Analysis}
+\subsection*{Segmentation Metrics for Analysis}
 Similar to Section~\ref{cat-seg-study}, I chose mean surface distance (MSD), and the Hausdorff distance as the segmentation metrics to compare the results. These metrics compute the distance between the surfaces of the predictions and ground truth and are less biased towards over-segmentations compared to the more popular Dice score. Both distances are computed in a directed manner i.e. the distance is computed from the ground truth to the prediction. For Hausdorff distance, the 99-th percentile is used. In addition to distance metrics, component-wise metrics were also computed. Connected components were computed from the voxel-wise segmentation masks by considering an 8-connectivity-neighborhood (diagonals were included as neighbours). We assign a \textit{true positive} (TP) label to a component in the prediction which overlaps with any component in the ground-truth at any voxel location. Conversely, the absence of any overlap is used to keep a tally of the number of \textit{false positives} (FP). Table~\ref{lesion_results} reports the True Positive Rate (TPR = TP/(TP+FN)) and the Positive Predictive Value (PPV = TP/(TP+FP)). 
 
-\subsection*{Results}
-
-Table~\ref{lesion_results} reports the segmentation performance of all the methods tested. Note that due to the size of the lesions, the segmentation task was difficult for all models. However, Spatial-MSMA significantly outperforms the competition. Compared to baselines, Spatial-MSMA shows the lowest distance metrics. These metrics reflect the specificity of the model's segmentation capabilities. Lower distances imply that the models segmentations have tighter boundaries around the anomalies, compared to baselines. Conversely, the component-wise metrics reflect the sensitivity of the model to anomalous regions in the image, regardless of size. Spatial-MSMA shows excellent detection capabilities, evident by the $0.83$ TPR as well as the exceptionally high PPV of $0.96$ (recall that the maximum possible PPV is 1.0). This implies that Spatial-MSMA detects few false positives, an advantageous trait in anomaly detection.
 
 \begin{table*}[!ht]
 \centering
@@ -104,9 +101,13 @@ GradCAM-MSMA &  12.68$\pm$~0.54 &  3.75$\pm$~0.37 &  0.43$\pm$~0.02 &  0.16$\pm$
 Spatial-MSMA &  \textbf{7.05~$\pm$~0.61} &  \textbf{2.10~$\pm$~0.43} &  \textbf{0.83~$\pm$~0.01} &  \textbf{0.96~$\pm$~0.01} \\
 \end{tabular}
 
-\caption{Segmentation metrics for lesion detection. Each model was trained on the inlier samples. Right column shows distance based metrics: 99th-percentile of the Hausdorff Distance (99-HD) and Mean Surface Distance (MSD). Right column shows component-wise metrics: True Positive Rate (TPR = TP/(TP+FN)) and Positive Predictive Value (PPV = TP/(TP+FP)). Spatial-MSMA significantly outperforms the baseline methodologies, especially when compared with component-wise metrics. }
+\caption{Segmentation metrics for lesion detection. Each model was trained only on the (same) inlier samples. Right column shows distance based metrics: 99th-percentile of the Hausdorff Distance (99-HD) and Mean Surface Distance (MSD). Right column shows component-wise metrics: True Positive Rate (TPR = TP/(TP+FN)) and Positive Predictive Value (PPV = TP/(TP+FP)). Spatial-MSMA significantly outperforms the baseline methodologies, especially for component-wise metrics. }
 \label{lesion_results}
 \end{table*}
+
+\subsection*{Results}
+
+Table~\ref{lesion_results} reports the segmentation performance of all the methods tested. Note that due to the size of the lesions, the segmentation task was difficult for all models. However, Spatial-MSMA significantly outperforms the competition. Compared to baselines, Spatial-MSMA shows the lowest distance metrics. These metrics reflect the specificity of the model's segmentation capabilities. Lower distances imply that the models segmentations have tighter boundaries around the anomalies, compared to baselines. Conversely, the component-wise metrics reflect the sensitivity of the model to anomalous regions in the image, regardless of size. Spatial-MSMA shows excellent detection capabilities, evident by the $0.83$ TPR as well as the exceptionally high PPV of $0.96$ (recall that the maximum possible PPV is 1.0). This implies that Spatial-MSMA detects few false positives, an advantageous trait in anomaly detection.
 
 \section{Conclusion}
 This chapter introduced Spatial-MSMA: an extension to MSMA that enables localization of anomalies. The key insight is to use a conditional likelihood model to learn the distribution of patch score norms, conditioned on the patch location and surrounding context. In my experiments, Spatial-MSMA succeeds at identifying anomalous regions in an image and shows significant performance improvements over baselines. While this chapter focused on experimentally verifying the capabilities of Spatial-MSMA using ground-truth data, the next chapter will investigate the data exploration capabilities of this approach.
