--- a/diss.tex
+++ b/diss.tex
@@ -6,20 +6,20 @@
 \input{frontmatter/pages}
 
 % Intro
-\input{intro}
-\input{background}
+\input{ch1-intro}
+\input{ch2-background}
 
 % MSMA
-\input{ch1}
+\input{ch3-msma}
 
 % GNSM
-\input{ch2}
+\input{ch4-gumbel}
 
 % Flows
-\input{ch3}
+\input{ch5-spatial}
 
 % Viz
-\input{ch4}
+\input{ch6-ds}
 
 % Appendices
 \appendix
